<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200">

    <View
        android:id="@+id/background"
        android:layout_width="390dp"
        android:layout_height="210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:background="@color/white"
        tools:layout_editor_absoluteY="108dp" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="140dp"
        android:layout_height="210dp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/background"
        android:background="@color/purple_200"
        tools:layout_editor_absoluteY="70dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/Image"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/movie_name"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/_3D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3d"
        android:textColor="@color/Blue"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@color/teal_200"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/Image"
        app:layout_constraintTop_toTopOf="@+id/movie_name"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/IMAX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imax"
        android:textColor="@color/Blue"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@color/teal_200"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/_3D"
        app:layout_constraintTop_toTopOf="@+id/movie_name"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/Image"
        app:layout_constraintTop_toBottomOf="@+id/_3D"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Starring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starring"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/Image"
        app:layout_constraintTop_toBottomOf="@+id/Director"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>